--- a/Concept Keywords and n-grams.Rmd
+++ b/Concept Keywords and n-grams.Rmd
@@ -34,10 +34,21 @@ Computer Science Keywords - The Top Trends in Computer Science are:
   5. https://www.sciencedirect.com/science/article/pii/S0378512218301658 
 ```{r setup, include=FALSE}
 #Top Computer Science Phrases
-computerScience <- c("algorithms", "data structures", "sorting", "recursion", "big data", "array", "tree", "stack", "queue", "graph", "hash table", "linked list", "heap", "artificial intelligence", "computer architecture", "greedy algorithm", "hill climbing", "simulated annealing", "dynamic programming", "functional programming", "programming", "machine learning", "p vs np", "halting problem", "concurrency", "multithreading", "parallelism", "race condition", "mutual exclusion", "semaphore", "binary", "deadlock", "brute-force attack", "social engineering", "security exploit", "security", "trojan horse", "rootkit", "cryptography", "symmetric cryptography", "asymmetric cryptography", "public key", "private key", "agile development", "software development", "software engineering", "software", "cognitive", "human-robot", "robot", "processing", "architecture", "architectures", "primitive", "agile", "data", "structure", "structures", "engineering", "exploit", "secure", "program", "run", "execute", "java", "python", "alan turing", "turing", "assembly", "c", "c++", "c#", "javascript", "version control", "network", "systems", "branch")
+computerScience <- c("algorithms", "data structures", "sorting", "recursion", "big data", "array", "tree", "stack", "queue", "graph", "hash table", "linked list", "heap", "artificial intelligence", "computer architecture", "greedy algorithm", "hill climbing", "simulated annealing", "dynamic programming", "functional programming", "programming", "machine learning", "p vs np", "halting problem", "concurrency", "multithreading", "parallelism", "race condition", "mutual exclusion", "semaphore", "binary", "deadlock", "brute-force attack", "social engineering", "security exploit", "security", "trojan horse", "rootkit", "cryptography", "symmetric cryptography", "asymmetric cryptography", "public key", "private key", "agile development", "software development", "software engineering", "software", "cognitive", "human-robot", "robot", "processing", "architecture", "architectures", "primitive", "agile", "data", "structure", "structures", "engineering", "exploit", "secure", "program", "run", "execute", "java", "python", "alan turing", "turing", "assembly", "c", "c++", "c#", "javascript", "version control", "network", "systems", "branch", "natural language processing", "processor", "NLP")
 
-#Top Chemistry Phrases
-chemistry <- c("review", "organic", "book", "synthesis", "catalyst", "reaction", "compd", "compounds", "reactions", "catalysis", "acid", "redn", "cleavage", "phase", "natural", "complex", "vol", "slide", "synthetic", "methods", "metal", "laboratory, "transfer), "substitution", "textbook", "reagent", "handbook", "prepn", "transition", "new"
+#Top Chemistry Phrases: https://pubs.acs.org/doi/pdf/10.1021/ci00030a002
+chemistry <- c("review", "organic", "book", "synthesis", "catalyst", "reaction", "compd", "compounds", "reactions", "catalysis", "acid", "redn", "cleavage", "phase", "natural", "complex", "vol", "slide", "synthetic", "methods", "metal", "laboratory", "transfer", "substitution", "textbook", "reagent", "handbook", "prepn", "transition", "new", "work", "group", "structure", "addn", "acids", "selective", "enzyme", "reagents", "syntheses", "techniques", "agent", "exchange", "cassette", "system", "application", "chemistry", "chem", "ketone", "carbonyl", "hydrogenation", "ed", "ester", "aldehyde", "chloride", "beilstein", "olefin", "carbon", "oxide", "Pt", "As", "halide", "sulfur", "polymer", "esters", "fluorination", "thiol", "isomerization", "carboxylic", "alkene", "catalytic", "oxidative", "alkyl", "allylic", "asym", "carbonylation", "alumina", "amine", "oxidation", "ether", "ylide", "epoxidn", "homologation", "aldehydes", "ketones", "cyclization", "amino" , "cyclic", "anion", "vanadium", "rhodium", "triphase", "catalyzed", "S", "hydrocarbon", "kinetics", "acid", "catalyst", "reaction", "synthesis", "derivatives", "prepn", "acids", "condensation", "compounds", "reactions", "addn", "salt", "purifn", "cleavage", "clompd", "crystal", "labeled", "review", "presence", "ring", "complex", "structure", "phase", "phenyl", "alkylation", "benzene", "phenol", "N", "aryl", "ether", "chloride", "arom", "substituted", "aromatic", "P", "ester", "alkyl", "herbicide", "xylene", "alpha", "aniline", "methyl", "O", "nitro", "benzyl", "beta", "amino","hydroxy", "hydrogenation", "rearrangement", "ketone", "carbon", "toluene", "esters", "sulfide", "chloro", "amine", "preparation", "insecticide", "fungicide", "chlorination", "substitution", "diphenyl", "anhydride", "oxime", "new", "antiinflamatory", "hydrocarbon", "styrene", "dimethyl", "phenoxy", "deriv", "cresol", "alloy", "metal", "review", "corrosion", "coating", "welding", "structure", "iron", "steel", "property", "fatigue", "deformation", "properties", "metals", "heat", "casting", "stress", "composite", "phase", "surface", "powder", "high", "electron", "treatment", "strength", "resistance", "temperature", "fracture", "friction", "creep", "diffusion", "wear", "materials", "grain", "internal", "mold", "film", "brass", "book", "thermal", "resistant", "hardening", "crack", "aging", "cast", "melting", "wire", "dislocation","tool", "mechanical", "temp", "transformation", "growth", "pressure", "solidicaton", "crystal", "formation", "molten", "rolling", "system", "addn", "low", "melt", "metallurgy", "cutting", "aluminum", "nickel", "copper", "titanium", "alloys", "molybdenum", "tungsten", "cobalt", "chromium", "carbide", "niobium", "zinc", "silicon", "zirconium", "silver", "hydrogen", "magnesium", "lead", "eutectic", "gold", "vanadium", "oxidn", "superalloy", "elec", "carbon", "tantalum", "manganese", "boron", "weld", "sintering", "plastic", "uranium", "bronze", "plasma", "electron", "proton", "neutron")
+
+#Top Physics Phrases: http://eprints.rclis.org/19814/1/112-dutta-en.pdf
+physics <- c("alloy", "antiferromagnetism", "compound", "crystal", "dislocation", "doping", "electricity", "electron", "exchange-interaction", "exciton", "fermion", "ferrimagnetism", "ferroelectricity", "helium", "impurity", "laser", "lattice", "magnetism", "metal", "nanostructured-material", "optics", "organic-compound", "paramagnetism", "phonon", "plasma physics", "plasmon", "quantum physics", "semiconductor", "superconductivity", "surface physics", "physics", "force", "propulsion", "thin film", "tunneling", "x-ray", "bose-einstein-condensation", "specific-heat", "conductivity, thermal", "band-structure", "quasiparticle", "particle", "argon", "flux-pinning", "cryogenics", "fermi-level", "fullerene", "fermi-surface", "boson-system", "fermi-liquid", "atmospheric science", "biomedical", "cellular biophysics", "circuit theory", "crystal", "image proessing", "laser", "magnetism", "nonlinear dynamics", "numerical analysis", "optics", "pattern formation", "plasma physics", "polymer", "quantum physics", "semiconductor", "surface science", "telecommunication", "acoustics", "astrophysical plasma", "cyclotron", "dielectric function", "dispersion", "doppler effect", "electricity", "electromagnetism", "electron", "magnetism", "microwave", "numerical analysis", "optics", "plasma physics") 
+
+```
+
+Unique Elements in Concepts
+```{r}
+computerScience <- as.data.frame(unique(computerScience))
+chemistry <- as.data.frame(unique(chemistry))
+physics <- as.data.frame(unique(physics))
 
 ```
 
